# dygo

./: .copier-answers.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: static-code-check.yml
src/dygo/: __init__.py  config.py  dygo.py
tests/: manual_json_test.py  manual_yaml_test.py  test.json  test.yaml
